samples/autoVariables/out.txt
samples\autoVariables\bad.c:4:5: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
    *a = &b;
    ^
